# pdf_analyzer_api

./: CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
pdf_analyzer_api/: app.py  pdf_analyzer.py
