[tool.poetry]
name = "pdf-analyzer-api"
version = "0.1.0"
description = "Simple API for energy billings"
authors = ["lorenzo <lorenzo@uname.cloud>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.110.1"
uvicorn = "^0.29.0"
pdfplumber = "^0.11.0"

[tool.poetry.group.dev.dependencies]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
